# market-intel-agent

./: .env.example  .gitignore  Cargo.toml  README.md
prompts/: system_prompt.md
src/: agent.rs  http_server.rs  main.rs  market.rs  mcp_server.rs  prompts.rs  smc.rs  tenzro.rs  types.rs
