[package]
name = "market-intel-agent"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "market-intel-agent"
path = "src/main.rs"

[dependencies]
axum = "0.8"
dotenvy = "0.15"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
